--- a/www/landing/src/assets/sass/_form.scss
+++ b/www/landing/src/assets/sass/_form.scss
@@ -20,7 +20,7 @@ input[type="submit"] {
 .mc-field-group input {
   border: none;
   border-bottom: 1px solid $primary-color;
-  background: none;
+  background: none !important;
   width: 250px;
   color: darken($secondary-color, 50%);
   font-family: "Montserrat Light", $fonts-defaults;
