Ajout lien mentions légales, corrections css sur footer et liens RS, ajout des balises titles sur les liens, et ajout textes sur les balises alt

--- a/www/landing/src/assets/sass/_footer.scss
+++ b/www/landing/src/assets/sass/_footer.scss
@@ -4,10 +4,7 @@ footer {
   color: $secondary-color;
 }
 
-.copyright {
-  display: inline-block;
-}
-
+.copyright,
 .logo-agency {
   display: inline-block;
 }
@@ -15,12 +12,15 @@ footer {
 .contact-us {
   display: inline-block;
   float: right;
+  a {
+    margin-left: 10px;
+  }
 }
 
 @media (max-width: 767px) {
   .copyright {
     text-align: center;
-    
+    display: block;
 }
   .contact-us {
     display: block;
