--- a/www/src/sass/_variables.scss
+++ b/www/src/sass/_variables.scss
@@ -1,11 +1,22 @@
-$bg-color: #000000;
+// Colors
 
 $primary-color: #a08308; // color title h1
 $secondary-color: #f1f2f2; // color paragraphe + h2
+$tertiary-color: #000000;
+
+$bg-color: $tertiary-color;
 
 // Buttons
 $btn-bg-color: #ffffff;
 $btn-txt-color: $primary-color;
 
 // Fonts
-$fonts-defaults: Helvetica, Arial, sans-serif;
+$fonts-logo: "Guld", Helvetica, Arial, sans-serif;
+$fonts-title: "Guld", Helvetica, Arial, sans-serif;
+$fonts-content: "Montserrat Light", Helvetica, Arial, sans-serif;
+
+$font-size: 16px;
+
+$font-size-h1: 6.375rem;
+$font-size-h2: 1.375rem;
+$font-size-h3: 1.25rem;
