--- a/www/src/sass/_generic.scss
+++ b/www/src/sass/_generic.scss
@@ -1,52 +1,43 @@
 html,
 body {
-  background: $bg-color;
+    background: $bg-color;
+    font-size: $font-size;
+    font-family: $fonts-content;
+    color: $secondary-color;
+    line-height: 1;
 }
 
 h1 {
-  font-size: 102px;
-  font-family: "Guld", $fonts-defaults;
-  color: $primary-color;
-  margin-bottom: 0;
-  line-height: 1;
-  a {
-    color: inherit;
-    &:focus,
-    &:hover {
-      color: inherit;
-      text-decoration: none;
+    font-size: $font-size-h1;
+    font-family: $fonts-logo;
+    color: $primary-color;
+    margin-bottom: 0;
+    a {
+        color: inherit;
+        &:focus,
+        &:hover {
+            color: inherit;
+            text-decoration: none;
+        }
     }
-  }
 }
 
 h2 {
-  margin-top: 0;
-  font-size: 22px;
-  font-family: "Montserrat Light", $fonts-defaults;
-  color: $secondary-color;
-  line-height: 1;
+    font-size: $font-size-h2;
+    font-family: $fonts-title;
+    color: $secondary-color;
 }
 
 h3 {
-  margin-top: 30px;
-  margin-bottom: 20px;
-  font-size: 20px;
-  font-family: "Montserrat Light", $fonts-defaults;
-  color: $primary-color;
-  line-height: 1;
+    font-size: $font-size-h3;
+    font-family: $fonts-title;
+    color: $secondary-color;
 }
 
 a {
-  color: $primary-color;
-  &:hover,
-  &:focus {
     color: $primary-color;
-  }
-}
-
-p {
-  color: $secondary-color;
-  font-size: 14px;
-  font-family: "Montserrat Light", $fonts-defaults;
-  text-align: center;
+    &:hover,
+    &:focus {
+        color: $primary-color;
+    }
 }
