--- a/www/src/sass/_variables.scss
+++ b/www/src/sass/_variables.scss
@@ -7,16 +7,16 @@ $tertiary-color: #000000;
 $bg-color: $tertiary-color;
 
 // Buttons
-$btn-bg-color: #ffffff;
+$btn-bg-color: $secondary-color;
 $btn-txt-color: $primary-color;
 
 // Fonts
 $fonts-logo: "Guld", Helvetica, Arial, sans-serif;
-$fonts-title: "Guld", Helvetica, Arial, sans-serif;
+$fonts-title: "Montserrat Light", Helvetica, Arial, sans-serif;
 $fonts-content: "Montserrat Light", Helvetica, Arial, sans-serif;
 
-$font-size: 16px;
+$font-size: 14px;
 
-$font-size-h1: 6.375rem;
-$font-size-h2: 1.375rem;
-$font-size-h3: 1.25rem;
+$font-size-h1: 7.429rem;
+$font-size-h2: 1.571rem;
+$font-size-h3: 1.429rem;
