Reset scss content, footer, form et header

--- a/www/src/sass/_content.scss
+++ b/www/src/sass/_content.scss
@@ -1,4 +1,4 @@
-#logo-area {
+/*#logo-area {
   background: url('../img/bg-behind-logo.jpg') center center / cover;
   height: 423px;
   width: 100%;
@@ -38,4 +38,4 @@
     padding-left: 0;
     padding-right: 0;
   }
-}
+}*/
