--- a/www/res/css/main.css
+++ b/www/res/css/main.css
@@ -11,13 +11,16 @@
 
 html,
 body {
+  font-family: 'Montserrat Light', Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 1;
+  color: #f1f2f2;
   background: #000;
 }
 
 h1 {
   font-family: 'Guld', Helvetica, Arial, sans-serif;
-  font-size: 102px;
-  line-height: 1;
+  font-size: 7.429rem;
   margin-bottom: 0;
   color: #a08308;
 }
@@ -34,19 +37,14 @@ h1 a:hover {
 
 h2 {
   font-family: 'Montserrat Light', Helvetica, Arial, sans-serif;
-  font-size: 22px;
-  line-height: 1;
-  margin-top: 0;
+  font-size: 1.571rem;
   color: #f1f2f2;
 }
 
 h3 {
   font-family: 'Montserrat Light', Helvetica, Arial, sans-serif;
-  font-size: 20px;
-  line-height: 1;
-  margin-top: 30px;
-  margin-bottom: 20px;
-  color: #a08308;
+  font-size: 1.429rem;
+  color: #f1f2f2;
 }
 
 a {
@@ -58,55 +56,41 @@ a:focus {
   color: #a08308;
 }
 
-p {
-  font-family: 'Montserrat Light', Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  text-align: center;
-  color: #f1f2f2;
-}
-
-header {
+/*header {
+  margin-top: 50px;
   position: relative;
   z-index: 100;
-  margin-top: 50px;
-}
-
-header h1 {
-  margin-top: 0;
-}
-
-#logo-area {
+  h1 {
+    margin-top: 0;
+  }
+}*/
+/*#logo-area {
+  background: url('../img/bg-behind-logo.jpg') center center / cover;
+  height: 423px;
+  width: 100%;
   position: relative;
   z-index: 10;
   top: -70px;
-  width: 100%;
-  height: 423px;
-  background: url('../img/bg-behind-logo.jpg') center center/cover;
-}
-
-#logo-area .logo {
-  width: 100%;
-  height: 100%;
-  padding-bottom: 40px;
-  text-align: center;
-  text-align: center;
-}
-
-#logo-area .logo img {
-  -webkit-transform: translateY(65%);
-          transform: translateY(65%);
-}
-
-#logo-area:after {
-  position: absolute;
-  bottom: 80px;
-  left: 50%;
-  width: 46px;
-  height: 3px;
-  content: '';
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  background-color: #a08308;
+  .logo {
+    text-align: center;
+    padding-bottom: 40px;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    img {
+      transform: translateY(65%);
+    }
+  }
+  &:after {
+    content: '';
+    position: absolute;
+    background-color: $primary-color;
+    width: 46px;
+    height: 3px;
+    bottom: 80px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 }
 
 .concept-description {
@@ -117,53 +101,14 @@ header h1 {
 
 @media (max-width: 767px) {
   .container {
-    padding-right: 0;
     padding-left: 0;
+    padding-right: 0;
   }
-}
-
-input[type='submit'] {
-  width: 197px;
-  height: 50px;
-  margin-top: 30px;
-  color: #a08308;
-  border-style: none;
-  border-radius: 50px;
-  background-color: #fff;
-}
-
-#mc_embed_signup {
-  position: relative;
-  top: -80px;
-}
-
-#mc_embed_signup div.mce_inline_error {
-  margin-top: 15px !important;
-  background-color: #a08308 !important;
-}
-
-.mc-field-group input {
-  font-family: 'Montserrat Light', Helvetica, Arial, sans-serif;
-  width: 250px;
-  padding: .5em 1em;
-  color: #6e7676;
-  border: none;
-  border-bottom: 1px solid #a08308;
-  background: none !important;
-}
-
-.mc-field-group input:focus {
-  color: #f1f2f2;
-}
-
-.mc-field-group label {
-  display: none;
-}
-
-footer {
+}*/
+/*footer {
+  border-top: 1px solid darken($secondary-color, 50%);;
   padding: 22px 0;
-  color: #f1f2f2;
-  border-top: 1px solid #6e7676;
+  color: $secondary-color;
 }
 
 .copyright,
@@ -174,28 +119,25 @@ footer {
 .contact-us {
   display: inline-block;
   float: right;
-}
-
-.contact-us a {
-  margin-left: 10px;
+  a {
+    margin-left: 10px;
+  }
 }
 
 @media (max-width: 767px) {
   .copyright {
-    display: block;
     text-align: center;
-  }
-
+    display: block;
+}
   .contact-us {
     display: block;
+    text-align: center;
     float: none;
     margin: 15px 0;
-    text-align: center;
+    a {
+      margin: 10px;
+    }
   }
-
-  .contact-us a {
-    margin: 10px;
-  }
-}
+}*/
 
 /*# sourceMappingURL=maps/main.css.map */
