--- a/www/src/sass/_footer.scss
+++ b/www/src/sass/_footer.scss
@@ -1,4 +1,4 @@
-footer {
+/*footer {
   border-top: 1px solid darken($secondary-color, 50%);;
   padding: 22px 0;
   color: $secondary-color;
@@ -31,4 +31,4 @@ footer {
       margin: 10px;
     }
   }
-}
+}*/
