--- a/www/src/sass/_variables.scss
+++ b/www/src/sass/_variables.scss
@@ -1,8 +1,8 @@
 // Colors
 
-$primary-color: #a08308; // color title h1
-$tertiary-color: #f1f2f2; // color paragraphe + h2
-$secondary-color: #000000;
+$primary-color: #a08308;
+$secondary-color: #f1f2f2;
+$tertiary-color: #000000;
 
 $bg-color: $tertiary-color;
 
