--- a/www/res/css/main.css
+++ b/www/res/css/main.css
@@ -14,6 +14,7 @@ body {
   font-family: 'Montserrat Light', Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1;
+  height: 100%;
   color: #f1f2f2;
   background: #000;
 }
@@ -65,7 +66,7 @@ a:focus {
   }
 }*/
 .navbar {
-  margin-top: 1em;
+  margin-bottom: 0;
 }
 
 .navbar-header h1 a {
@@ -129,8 +130,6 @@ a:focus {
   }
 }*/
 footer {
-  position: absolute;
-  bottom: 0;
   padding: 22px 0;
   color: #f1f2f2;
   border-top: 1px solid #6e7676;
