--- a/www/src/sass/_generic.scss
+++ b/www/src/sass/_generic.scss
@@ -1,43 +1,44 @@
 html,
 body {
-    background: $bg-color;
-    font-size: $font-size;
-    font-family: $fonts-content;
-    color: $secondary-color;
-    line-height: 1;
+  background: $bg-color;
+  font-size: $font-size;
+  font-family: $fonts-content;
+  color: $secondary-color;
+  line-height: 1;
+  height: 100%;
 }
 
 h1 {
-    font-size: $font-size-h1;
-    font-family: $fonts-logo;
-    color: $primary-color;
-    margin-bottom: 0;
-    a {
-        color: inherit;
-        &:focus,
-        &:hover {
-            color: inherit;
-            text-decoration: none;
-        }
+  font-size: $font-size-h1;
+  font-family: $fonts-logo;
+  color: $primary-color;
+  margin-bottom: 0;
+  a {
+    color: inherit;
+    &:focus,
+    &:hover {
+      color: inherit;
+      text-decoration: none;
     }
+  }
 }
 
 h2 {
-    font-size: $font-size-h2;
-    font-family: $fonts-title;
-    color: $secondary-color;
+  font-size: $font-size-h2;
+  font-family: $fonts-title;
+  color: $secondary-color;
 }
 
 h3 {
-    font-size: $font-size-h3;
-    font-family: $fonts-title;
-    color: $secondary-color;
+  font-size: $font-size-h3;
+  font-family: $fonts-title;
+  color: $secondary-color;
 }
 
 a {
+  color: $primary-color;
+  &:hover,
+  &:focus {
     color: $primary-color;
-    &:hover,
-    &:focus {
-        color: $primary-color;
-    }
+  }
 }
