--- a/www/res/css/main.css
+++ b/www/res/css/main.css
@@ -19,6 +19,11 @@ body {
   background: #000;
 }
 
+main {
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+
 h1 {
   font-family: 'Guld', Helvetica, Arial, sans-serif;
   font-size: 7.429rem;
@@ -46,6 +51,10 @@ h3 {
   font-family: 'Montserrat Light', Helvetica, Arial, sans-serif;
   font-size: 1.429rem;
   color: #f1f2f2;
+}
+
+p {
+  line-height: 1.25;
 }
 
 a {
@@ -88,47 +97,67 @@ a:focus {
   background-color: white;
 }
 
-/*#logo-area {
-  background: url('../img/bg-behind-logo.jpg') center center / cover;
-  height: 423px;
+#logo-area {
   width: 100%;
-  position: relative;
-  z-index: 10;
-  top: -70px;
-  .logo {
-    text-align: center;
-    padding-bottom: 40px;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    img {
-      transform: translateY(65%);
-    }
-  }
-  &:after {
-    content: '';
-    position: absolute;
-    background-color: $primary-color;
-    width: 46px;
-    height: 3px;
-    bottom: 80px;
-    left: 50%;
-    transform: translateX(-50%);
-  }
+  height: auto;
+  background: url('../img/bg-behind-logo.jpg') center center/cover;
 }
 
-.concept-description {
-  position: relative;
-  z-index: 100;
-  top: -110px;
+#logo-area .logo {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  text-align: center;
+}
+
+#first-presentation {
+  margin-top: 10%;
 }
 
 @media (max-width: 767px) {
   .container {
-    padding-left: 0;
     padding-right: 0;
+    padding-left: 0;
   }
-}*/
+}
+
+input[type='submit'] {
+  width: 197px;
+  height: 50px;
+  margin-top: 30px;
+  color: #a08308;
+  border-style: none;
+  border-radius: 50px;
+  background-color: #f1f2f2;
+}
+
+#mc_embed_signup {
+  margin-top: 10em;
+}
+
+#mc_embed_signup div.mce_inline_error {
+  margin-top: 15px !important;
+  background-color: #a08308 !important;
+}
+
+.mc-field-group input {
+  font-family: 'Montserrat Light', Helvetica, Arial, sans-serif;
+  width: 250px;
+  padding: .5em 1em;
+  color: #6e7676;
+  border: none;
+  border-bottom: 1px solid #a08308;
+  background: none !important;
+}
+
+.mc-field-group input:focus {
+  color: #f1f2f2;
+}
+
+.mc-field-group label {
+  display: none;
+}
+
 footer {
   padding: 22px 0;
   color: #f1f2f2;
