--- a/www/src/sass/_content.scss
+++ b/www/src/sass/_content.scss
@@ -1,36 +1,19 @@
-/*#logo-area {
+#logo-area {
   background: url('../img/bg-behind-logo.jpg') center center / cover;
-  height: 423px;
+  height: auto;
   width: 100%;
-  position: relative;
-  z-index: 10;
-  top: -70px;
   .logo {
     text-align: center;
-    padding-bottom: 40px;
     width: 100%;
     height: 100%;
     text-align: center;
     img {
-      transform: translateY(65%);
     }
-  }
-  &:after {
-    content: '';
-    position: absolute;
-    background-color: $primary-color;
-    width: 46px;
-    height: 3px;
-    bottom: 80px;
-    left: 50%;
-    transform: translateX(-50%);
   }
 }
 
-.concept-description {
-  position: relative;
-  z-index: 100;
-  top: -110px;
+#first-presentation {
+  margin-top: 10%;
 }
 
 @media (max-width: 767px) {
@@ -38,4 +21,4 @@
     padding-left: 0;
     padding-right: 0;
   }
-}*/
+}
