--- a/www/res/css/main.css
+++ b/www/res/css/main.css
@@ -196,4 +196,63 @@ footer {
   }
 }
 
+#error-404 {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background: url('https://media.giphy.com/media/GDsY57MvzDlBu/giphy.gif') center center/cover;
+}
+
+#error-404 .bloc-404 {
+  padding: 1em;
+  background-color: #a08308;
+}
+
+#error-404 .bloc-404 h1 {
+  font-family: 'Montserrat Light', Helvetica, Arial, sans-serif;
+  font-size: 1rem;
+  margin: 0;
+  margin-bottom: 1em;
+  color: #f1f2f2;
+}
+
+#error-404 .bloc-404 a {
+  font-size: 1rem;
+  position: relative;
+  padding: .5em;
+  color: #f1f2f2;
+  border: 3px solid #f1f2f2;
+}
+
+#error-404 .bloc-404 a:hover,
+#error-404 .bloc-404 a:focus {
+  text-decoration: none;
+  color: #000;
+  border-color: #000;
+}
+
+@media (min-width: 768px) {
+  #error-404 .bloc-404 {
+    padding: 2em;
+  }
+
+  #error-404 .bloc-404 h1 {
+    font-size: 3rem;
+    margin-bottom: 1em;
+  }
+
+  #error-404 .bloc-404 a {
+    font-size: 2rem;
+    padding: .5em;
+    border: 3px solid #f1f2f2;
+  }
+}
+
+@media (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+  #error-404 .bloc-404 {
+    width: 100%;
+  }
+}
+
 /*# sourceMappingURL=maps/main.css.map */
