Mise à jour du player php, du responsive du player

--- a/www/src/sass/_variables.scss
+++ b/www/src/sass/_variables.scss
@@ -2,7 +2,7 @@
 
 $primary-color: #a08308;
 $secondary-color: #f1f2f2;
-$tertiary-color: #000000;
+$tertiary-color: lighten(#000000, 35%);
 
 $bg-color: $tertiary-color;
 
