--- a/www/res/css/main.css
+++ b/www/res/css/main.css
@@ -16,7 +16,7 @@ body {
   line-height: 1;
   height: 100%;
   color: #f1f2f2;
-  background: #000;
+  background: #595959;
 }
 
 main {
@@ -87,13 +87,13 @@ a:focus {
 }
 
 .navbar-nav .active a {
-  color: #000;
+  color: #595959;
   background-color: white;
 }
 
 .navbar-nav .active a:hover,
 .navbar-nav .active a:focus {
-  color: #000;
+  color: #595959;
   background-color: white;
 }
 
@@ -119,6 +119,24 @@ a:focus {
     padding-right: 0;
     padding-left: 0;
   }
+}
+
+.embed-container {
+  position: relative;
+  overflow: hidden;
+  max-width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+}
+
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 input[type='submit'] {
@@ -228,8 +246,8 @@ footer {
 #error-404 .bloc-404 a:hover,
 #error-404 .bloc-404 a:focus {
   text-decoration: none;
-  color: #000;
-  border-color: #000;
+  color: #595959;
+  border-color: #595959;
 }
 
 @media (min-width: 768px) {
