--- a/www/res/css/main.css
+++ b/www/res/css/main.css
@@ -15,8 +15,8 @@ body {
   font-size: 14px;
   line-height: 1;
   height: 100%;
-  color: #f1f2f2;
-  background: #000;
+  color: grey;
+  background: #fff;
 }
 
 main {
@@ -28,7 +28,7 @@ h1 {
   font-family: 'Guld', Helvetica, Arial, sans-serif;
   font-size: 7.429rem;
   margin-bottom: 0;
-  color: #a08308;
+  color: #000;
 }
 
 h1 a {
@@ -44,13 +44,13 @@ h1 a:hover {
 h2 {
   font-family: 'Montserrat Light', Helvetica, Arial, sans-serif;
   font-size: 1.571rem;
-  color: #f1f2f2;
+  color: grey;
 }
 
 h3 {
   font-family: 'Montserrat Light', Helvetica, Arial, sans-serif;
   font-size: 1.429rem;
-  color: #f1f2f2;
+  color: grey;
 }
 
 p {
@@ -58,67 +58,12 @@ p {
 }
 
 a {
-  color: #a08308;
+  color: #000;
 }
 
 a:hover,
 a:focus {
-  color: #a08308;
-}
-
-/*header {
-  margin-top: 50px;
-  position: relative;
-  z-index: 100;
-  h1 {
-    margin-top: 0;
-  }
-}*/
-.navbar {
-  margin-bottom: 0;
-}
-
-.navbar-header h1 a {
-  font-size: 7.429rem;
-}
-
-.navbar-nav {
-  margin-top: 1.5em;
-}
-
-.navbar-nav .active a {
   color: #000;
-  background-color: white;
-}
-
-.navbar-nav .active a:hover,
-.navbar-nav .active a:focus {
-  color: #000;
-  background-color: white;
-}
-
-#logo-area {
-  width: 100%;
-  height: auto;
-  background: url('../img/bg-behind-logo.jpg') center center/cover;
-}
-
-#logo-area .logo {
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  text-align: center;
-}
-
-#first-presentation {
-  margin-top: 10%;
-}
-
-@media (max-width: 767px) {
-  .container {
-    padding-right: 0;
-    padding-left: 0;
-  }
 }
 
 .embed-container {
@@ -139,81 +84,6 @@ a:focus {
   height: 100%;
 }
 
-input[type='submit'] {
-  width: 197px;
-  height: 50px;
-  margin-top: 30px;
-  color: #a08308;
-  border-style: none;
-  border-radius: 50px;
-  background-color: #f1f2f2;
-}
-
-#mc_embed_signup {
-  margin-top: 10em;
-}
-
-#mc_embed_signup div.mce_inline_error {
-  margin-top: 15px !important;
-  background-color: #a08308 !important;
-}
-
-.mc-field-group input {
-  font-family: 'Montserrat Light', Helvetica, Arial, sans-serif;
-  width: 250px;
-  padding: .5em 1em;
-  color: #6e7676;
-  border: none;
-  border-bottom: 1px solid #a08308;
-  background: none !important;
-}
-
-.mc-field-group input:focus {
-  color: #f1f2f2;
-}
-
-.mc-field-group label {
-  display: none;
-}
-
-footer {
-  padding: 22px 0;
-  color: #f1f2f2;
-  border-top: 1px solid #6e7676;
-}
-
-.copyright,
-.logo-agency {
-  display: inline-block;
-}
-
-.contact-us {
-  display: inline-block;
-  float: right;
-}
-
-.contact-us a {
-  margin-left: 10px;
-}
-
-@media (max-width: 767px) {
-  .copyright {
-    display: block;
-    text-align: center;
-  }
-
-  .contact-us {
-    display: block;
-    float: none;
-    margin: 15px 0;
-    text-align: center;
-  }
-
-  .contact-us a {
-    margin: 10px;
-  }
-}
-
 #error-404 {
   width: 100%;
   height: 100%;
@@ -224,7 +94,7 @@ footer {
 
 #error-404 .bloc-404 {
   padding: 1em;
-  background-color: #a08308;
+  background-color: #000;
 }
 
 #error-404 .bloc-404 h1 {
@@ -232,22 +102,22 @@ footer {
   font-size: 1rem;
   margin: 0;
   margin-bottom: 1em;
-  color: #f1f2f2;
+  color: grey;
 }
 
 #error-404 .bloc-404 a {
   font-size: 1rem;
   position: relative;
   padding: .5em;
-  color: #f1f2f2;
-  border: 3px solid #f1f2f2;
+  color: grey;
+  border: 3px solid grey;
 }
 
 #error-404 .bloc-404 a:hover,
 #error-404 .bloc-404 a:focus {
   text-decoration: none;
-  color: #000;
-  border-color: #000;
+  color: #fff;
+  border-color: #fff;
 }
 
 @media (min-width: 768px) {
@@ -263,7 +133,7 @@ footer {
   #error-404 .bloc-404 a {
     font-size: 2rem;
     padding: .5em;
-    border: 3px solid #f1f2f2;
+    border: 3px solid grey;
   }
 }
 
