--- a/www/res/css/main.css
+++ b/www/res/css/main.css
@@ -1,69 +1,40 @@
-@font-face {
-  font-family: 'Guld';
-  src: url('../fonts/guldscript-webfont.woff') format('woff'), url('../fonts/guldscript-webfont.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'Montserrat Light';
-
-    src: url('../fonts/montserrat-light-webfont.woff') format('woff'), url('../fonts/montserrat-light-webfont.ttf') format('truetype');
-}
-
 html,
 body {
-  font-family: 'Montserrat Light', Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  line-height: 1;
   height: 100%;
-  color: grey;
-  background: #fff;
 }
 
-main {
-  padding-top: 1em;
-  padding-bottom: 1em;
-}
-
-h1 {
-  font-family: 'Guld', Helvetica, Arial, sans-serif;
-  font-size: 7.429rem;
+.navbar {
   margin-bottom: 0;
-  color: #000;
 }
 
-h1 a {
-  color: inherit;
+#block-player {
+  width: 100%;
+  height: 100%;
+  margin-top: -52px;
+  padding-top: 52px;
 }
 
-h1 a:focus,
-h1 a:hover {
-  text-decoration: none;
-  color: inherit;
+#block-player #player-youtube {
+  float: left;
+  width: 70%;
+  height: 100%;
 }
 
-h2 {
-  font-family: 'Montserrat Light', Helvetica, Arial, sans-serif;
-  font-size: 1.571rem;
-  color: grey;
+#block-player #chat {
+  position: relative;
+  float: left;
+  width: 30%;
+  min-height: 100%;
 }
 
-h3 {
-  font-family: 'Montserrat Light', Helvetica, Arial, sans-serif;
-  font-size: 1.429rem;
-  color: grey;
-}
-
-p {
-  line-height: 1.25;
-}
-
-a {
-  color: #000;
-}
-
-a:hover,
-a:focus {
-  color: #000;
+#block-player #chat iframe {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .embed-container {
@@ -84,63 +55,55 @@ a:focus {
   height: 100%;
 }
 
-#error-404 {
+/*#error-404 {
+  background: url('https://media.giphy.com/media/GDsY57MvzDlBu/giphy.gif') center center / cover;
   width: 100%;
   height: 100%;
-  margin: 0;
   padding: 0;
-  background: url('https://media.giphy.com/media/GDsY57MvzDlBu/giphy.gif') center center/cover;
-}
-
-#error-404 .bloc-404 {
-  padding: 1em;
-  background-color: #000;
-}
-
-#error-404 .bloc-404 h1 {
-  font-family: 'Montserrat Light', Helvetica, Arial, sans-serif;
-  font-size: 1rem;
   margin: 0;
-  margin-bottom: 1em;
-  color: grey;
-}
-
-#error-404 .bloc-404 a {
-  font-size: 1rem;
-  position: relative;
-  padding: .5em;
-  color: grey;
-  border: 3px solid grey;
-}
-
-#error-404 .bloc-404 a:hover,
-#error-404 .bloc-404 a:focus {
-  text-decoration: none;
-  color: #fff;
-  border-color: #fff;
-}
-
-@media (min-width: 768px) {
-  #error-404 .bloc-404 {
+  .bloc-404 {
+    background-color: $primary-color;
+    padding: 1em;
+    h1 {
+      margin: 0;
+      margin-bottom: 1em;
+      font-size: 1rem;
+      font-family: $fonts-title;
+      color: $secondary-color;
+    }
+    a {
+      position: relative;
+      border: 3px solid $secondary-color;
+      color: $secondary-color;
+      font-size: 1rem;
+      padding: .5em;
+      &:hover,
+      &:focus {
+        border-color: $tertiary-color;
+        color: $tertiary-color;
+        text-decoration: none;
+      }
+    }
+  }
+  @media (min-width: 768px) {
+    .bloc-404 {
     padding: 2em;
+    h1 {
+      margin-bottom: 1em;
+      font-size: 3rem;
+    }
+    a {
+      border: 3px solid $secondary-color;
+      font-size: 2rem;
+      padding: .5em;
+    }
   }
-
-  #error-404 .bloc-404 h1 {
-    font-size: 3rem;
-    margin-bottom: 1em;
   }
-
-  #error-404 .bloc-404 a {
-    font-size: 2rem;
-    padding: .5em;
-    border: 3px solid grey;
-  }
+  @media (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
+    .bloc-404 {
+  width: 100%;
 }
-
-@media (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
-  #error-404 .bloc-404 {
-    width: 100%;
   }
-}
+}*/
 
 /*# sourceMappingURL=maps/main.css.map */
