--- a/www/src/sass/_404.scss
+++ b/www/src/sass/_404.scss
@@ -1,4 +1,4 @@
-#error-404 {
+/*#error-404 {
   background: url('https://media.giphy.com/media/GDsY57MvzDlBu/giphy.gif') center center / cover;
   width: 100%;
   height: 100%;
@@ -47,4 +47,4 @@
   width: 100%;
 }
   }
-}
+}*/
