--- a/www/src/sass/_player.scss
+++ b/www/src/sass/_player.scss
@@ -1,3 +1,30 @@
+#block-player {
+  height: 100%;
+  width: 100%;
+  margin-top: -52px;
+  padding-top: 52px;
+  #player-youtube {
+    width: 70%;
+    float: left;
+    height: 100%;
+  }
+  #chat {
+    min-height: 100%;
+    width: 30%;
+    float: left;
+    position: relative;
+    iframe {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+
 .embed-container {
   position: relative;
   padding-bottom: 56.25%;
