--- a/www/src/sass/_content.scss
+++ b/www/src/sass/_content.scss
@@ -19,7 +19,17 @@
   .row {
     &:last-of-type {
       background: #F1F1F1;
-      padding: 75px 0;
+      padding: 50px 0;
     }
   }
+}
+
+#candidates,
+#replay-playlist {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+#replay-playlist {
+  background: #F1F1F1;
 }
