Màj header, couleurs, fonts, bg de la landing

--- a/www/landing/src/assets/sass/_content.scss
+++ b/www/landing/src/assets/sass/_content.scss
@@ -1,4 +1,4 @@
-#logo-area {
+/*#logo-area {
   background: url('../img/bg-behind-logo.jpg') center center / cover;
   height: 423px;
   width: 100%;
@@ -25,7 +25,7 @@
     left: 50%;
     transform: translateX(-50%);
   }
-}
+}*/
 
 .concept-description {
   position: relative;
