--- a/www/landing/src/assets/sass/_footer.scss
+++ b/www/landing/src/assets/sass/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-  border-top: 1px solid darken($secondary-color, 50%);;
+  border-top: 1px solid $primary-color;
   padding: 22px 0;
   color: $secondary-color;
 }
