--- a/www/landing/src/assets/sass/_fonts.scss
+++ b/www/landing/src/assets/sass/_fonts.scss
@@ -9,3 +9,9 @@
     src: url('../fonts/montserrat-light-webfont.woff') format('woff'),
          url('../fonts/montserrat-light-webfont.ttf') format('truetype');
 }
+
+@font-face {
+    font-family: 'Gotham Bold';
+    src: url('../fonts/GothamCondensed-Bold.woff') format('woff'),
+         url('../fonts/GothamCondensed-Bold.ttf') format('truetype');
+}
