--- a/www/landing/src/assets/sass/_variables.scss
+++ b/www/landing/src/assets/sass/_variables.scss
@@ -1,6 +1,6 @@
 /*$icon-font-path: '../../../bower_components/bootstrap-sass/assets/fonts/bootstrap/';*/
 
-$bg-color: #ffffff;
+$bg-color: #a08308;
 
 $primary-color: #a08308; // color title h1
 $secondary-color: #ffffff; // color paragraphe + h2
