--- a/www/landing/src/assets/sass/_fonts.scss
+++ b/www/landing/src/assets/sass/_fonts.scss
@@ -11,6 +11,12 @@
 }
 
 @font-face {
+    font-family: 'Montserrat Bold';
+    src: url('../fonts/montserrat-bold-webfont.woff') format('woff'),
+         url('../fonts/montserrat-bold-webfont.ttf') format('truetype');
+}
+
+@font-face {
     font-family: 'Gotham Bold';
     src: url('../fonts/GothamCondensed-Bold.woff') format('woff'),
          url('../fonts/GothamCondensed-Bold.ttf') format('truetype');
