--- a/www/landing/src/assets/sass/_header.scss
+++ b/www/landing/src/assets/sass/_header.scss
@@ -1,8 +1,26 @@
 header {
-  margin-top: 50px;
-  position: relative;
-  z-index: 100;
+  padding-top: 50px;
+  overflow: hidden;
   h1 {
     margin-top: 0;
+  }
+  .logo {
+    position: relative;
+    top: -60px;
+    &:after {
+      content: '';
+      width: 50px;
+      height: 3px;
+      background: $primary-color;
+      position: absolute;
+      transform: translateX(-50%);
+      left: 50%;
+      bottom: 0;
+    }
+  }
+  @media (max-width: 767px) {
+    .logo {
+      top: -30px;
+    }
   }
 }
