--- a/www/res/css/main.css
+++ b/www/res/css/main.css
@@ -26,7 +26,7 @@ body {
   background-color: none;
 }
 
-#vote-activities .row:last-of-type {
+#vote-activities {
   padding: 50px 0;
   background: #f1f1f1;
 }
