--- a/www/res/css/main.css
+++ b/www/res/css/main.css
@@ -28,7 +28,45 @@ body {
 
 #vote-activities {
   padding: 50px 0;
-  background: #f1f1f1;
+  background: #fff;
+}
+
+#vote-activities .slider .slick-list {
+  padding-top: 50px;
+}
+
+#vote-activities .slider .slick-list .slick-track {
+  background: #f0f0f0;
+}
+
+#vote-activities .slider .slick-list .slick-track .slick-slide {
+  padding: 30px 0;
+}
+
+#vote-activities .slider .slick-dots {
+  position: absolute;
+  top: 0;
+  display: block;
+  width: 100%;
+  padding-left: 0;
+}
+
+#vote-activities .slider .slick-dots li {
+  display: inline-block;
+  width: 25%;
+}
+
+#vote-activities .slider .slick-dots li button {
+  width: 100%;
+  padding: 15px;
+  border: initial;
+  background: none;
+}
+
+#vote-activities .slider .slick-dots li.slick-active button,
+#vote-activities .slider .slick-dots li:hover button,
+#vote-activities .slider .slick-dots li:focus button {
+  background: #f0f0f0;
 }
 
 #candidates,
