--- a/www/src/sass/_content.scss
+++ b/www/src/sass/_content.scss
@@ -18,7 +18,7 @@
 #vote-activities {
   background: #ffffff;
   padding: 50px 0;
-  .slider {
+  .slider-activities {
     .slick-list {
       .slick-track {
         background: #F0F0F0;
