--- a/www/src/sass/_variables.scss
+++ b/www/src/sass/_variables.scss
@@ -1,11 +1,16 @@
 
 // Colors
 
-$primary-color: #a08308;
-$secondary-color: #f1f2f2;
-$tertiary-color: #000000;
+$primary-color: #d1aa03;
+$secondary-color-light: #ffffff;
+$secondary-color-dark: #f5f5f5;
+$tertiary-color-light: #999999;
+$tertiary-color-dark: #777777;
+$quaternary-color: #2c2c2c;
 
-$bg-color: $tertiary-color;
+$bg-header-color: $quaternary-color;
+$bg-content-color: $tertiary-color;
+$bg-footer-color: $tertiary-color;
 
 // Buttons
 $btn-bg-color: $secondary-color;
