--- a/www/src/sass/_variables.scss
+++ b/www/src/sass/_variables.scss
@@ -1,6 +1,4 @@
-
 // Colors
-
 $primary-color: #d1aa03;
 $secondary-color-light: #ffffff;
 $secondary-color-dark: #f5f5f5;
@@ -9,20 +7,25 @@ $tertiary-color-dark: #777777;
 $quaternary-color: #2c2c2c;
 
 $bg-header-color: $quaternary-color;
-$bg-content-color: $tertiary-color;
-$bg-footer-color: $tertiary-color;
+$bg-content-color: $quaternary-color;
+//$bg-footer-color: $tertiary-color;
 
-// Buttons
-$btn-bg-color: $secondary-color;
-$btn-txt-color: $primary-color;
+// Fonts Family
+$font-default: Helvetica, Arial, sans-serif;
 
-// Fonts
-$fonts-logo: "Guld", Helvetica, Arial, sans-serif;
-$fonts-title: "Montserrat Light", Helvetica, Arial, sans-serif;
-$fonts-content: "Montserrat Light", Helvetica, Arial, sans-serif;
+$montserrat-regular: 'Montserrat Regular', $font-default;
+$montserrat-bold: 'Montserrat Bold', $font-default;
+$opensans-regular: 'Open Sans Regular', $font-default;
+$opensans-bold: 'Open Sans Bold', $font-default;
 
+$fonts-content: $montserrat-regular;
+
+// Fonts Size
 $font-size: 14px;
 
-$font-size-h1: 7.429rem;
-$font-size-h2: 1.571rem;
-$font-size-h3: 1.429rem;
+$font-size-h1: 7.429rem; // 104px
+$font-size-h2: 1.571rem; // 22px
+$font-size-h3: 1.429rem; // 20px
+
+$font-size-btn: 1.571rem; // 22px
+$font-size-menu: 1.571rem; // 22px
