--- a/www/src/sass/_variables.scss
+++ b/www/src/sass/_variables.scss
@@ -6,8 +6,8 @@ $tertiary-color-light: #999999;
 $tertiary-color-dark: #777777;
 $quaternary-color: #2c2c2c;
 
-$bg-header-color: $quaternary-color;
-$bg-content-color: $quaternary-color;
+$bg-header-color: $primary-color;
+$bg-content-color: $secondary-color-light;
 //$bg-footer-color: $tertiary-color;
 
 // Fonts Family
@@ -29,3 +29,6 @@ $font-size-h3: 1.429rem; // 20px
 
 $font-size-btn: 1.571rem; // 22px
 $font-size-menu: 1.571rem; // 22px
+
+// Background Sprite
+$sprite-img: '../img/sprite.png';
