--- a/www/res/css/main.css
+++ b/www/res/css/main.css
@@ -77,6 +77,81 @@ body {
   color: #fff;
 }
 
+.btn-shine {
+  position: relative;
+  -webkit-transition: all .2s ease-in;
+  transition: all .2s ease-in;
+  border: none;
+  background: -webkit-linear-gradient(330deg, #d1aa03 0%, #a88900 18%, #d1ab03 30%, #ffeb94 46%, #d1ab03 55%, #a88900 69%, #d1aa03 100%);
+  background: linear-gradient(120deg, #d1aa03 0%, #a88900 18%, #d1ab03 30%, #ffeb94 46%, #d1ab03 55%, #a88900 69%, #d1aa03 100%);
+  box-shadow: 0 0 0 0 transparent;
+  -ms-filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#d1aa03', endColorstr='#d1aa03', GradientType=1);
+}
+
+.btn-shine:hover {
+  -webkit-transition: all .2s ease-out;
+  transition: all .2s ease-out;
+  color: #fff;
+}
+
+.btn-shine:hover:before {
+  -webkit-animation: shine .5s 0s linear;
+          animation: shine .5s 0s linear;
+}
+
+.btn-shine:active {
+  -webkit-transition: box-shadow .2s ease-in;
+  transition: box-shadow .2s ease-in;
+  box-shadow: 0 0 0 0 transparent;
+}
+
+.btn-shine:before {
+  position: absolute;
+  top: 7%;
+  left: 0;
+  display: block;
+  width: 0;
+  height: 86%;
+  content: '';
+  -webkit-transform: skewX(-20deg);
+          transform: skewX(-20deg);
+  opacity: 0;
+  background: #fff;
+  box-shadow: 0 0 15px 3px #fff;
+}
+
+@-webkit-keyframes shine {
+  from {
+    left: 0;
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  to {
+    left: 100%;
+    opacity: 0;
+  }
+}
+
+@keyframes shine {
+  from {
+    left: 0;
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  to {
+    left: 100%;
+    opacity: 0;
+  }
+}
+
 .text-center {
   text-align: center;
 }
@@ -148,9 +223,14 @@ body {
   background: none;
 }
 
+.index-subscribe section:last-of-type {
+  margin: 5em auto;
+}
+
 #concept {
-  margin-top: 5em;
+  margin: 5em auto;
   background: #f5f5f5;
+  box-shadow: 0 0 84px 0 rgba(0, 0, 0, .15);
 }
 
 #concept .block-logo {
