--- a/www/src/sass/_content.scss
+++ b/www/src/sass/_content.scss
@@ -1,7 +1,14 @@
 // Index 1 Concept
+.index-subscribe {
+  section:last-of-type {
+    margin: 5em auto;
+  }
+}
+
 #concept {
-  margin-top: 5em;
+  margin: 5em auto;
   background: $secondary-color-dark;
+  box-shadow: 0px 0px 84px 0px rgba(0, 0, 0, 0.15); 
   .block-logo {
     background-image:  url("../img/logo-lg.png"), url("../img/background-logo-index.jpg");
     background-position: center center, center center;
@@ -27,6 +34,9 @@
     height: auto;
   }
 }
+
+
+// Other styles
 
 .btn-activities {
   display: block;
