--- a/www/src/sass/_generic.scss
+++ b/www/src/sass/_generic.scss
@@ -4,6 +4,15 @@ body {
   background: $bg-content-color;
 }
 
+a {
+  color: $primary-color;
+  transition: all .2s ease-in;
+  &:hover,
+  &:focus {
+    color: $primary-color;
+  }
+}
+
 
 /*********** Buttons ***********/
 
@@ -56,7 +65,8 @@ body {
   background: linear-gradient(120deg, #d1aa03 0%, #a88900 18%, #d1ab03 30%, #ffeb94 46%, #d1ab03 55%, #a88900 69%, #d1aa03 100%);
   -ms-filter: unquote("progid: DXImageTransform.Microsoft.gradient( startColorstr='#d1aa03', endColorstr='#d1aa03', GradientType=1)");
   position: relative;
-  box-shadow: 0 0 0 0 transparent;
+  //box-shadow: 0 0 0 0 transparent;
+  box-shadow: 0px 0px 84px 0px rgba(0, 0, 0, 0.15);
   transition: all 0.2s ease-in;
   border: none;
   &:hover {
@@ -67,7 +77,7 @@ body {
     animation: shine 0.5s 0s linear;
   }
   &:active {
-    box-shadow: 0 0 0 0 transparent;
+    //box-shadow: 0 0 0 0 transparent;
     transition: box-shadow 0.2s ease-in;
   }
   &:before {
