--- a/www/src/sass/_variables.scss
+++ b/www/src/sass/_variables.scss
@@ -1,3 +1,8 @@
+// Boostrap Breakpoints
+$screen-sm-min: 768px;
+$screen-md-min: 992px;
+$screen-lg-min: 1200px;
+
 // Colors
 $primary-color: #d1aa03;
 $secondary-color-light: #ffffff;
