--- a/www/src/sass/_content.scss
+++ b/www/src/sass/_content.scss
@@ -4,16 +4,12 @@
     margin: 5em auto;
   }
 }
-
 #concept {
   margin: 5em auto;
   background: $secondary-color-dark;
   box-shadow: 0px 0px 84px 0px rgba(0, 0, 0, 0.15);
   .block-logo {
-    background-image:  url("../img/logo-lg.png"), url("../img/background-logo-index.jpg");
-    background-position: center center, center center;
-    background-repeat: no-repeat;
-    height: 585px;
+    display: none;
   }
   .what-is-it {
     padding-top: 9em;
@@ -35,9 +31,32 @@
   }
 }
 
+@media (min-width: $screen-sm-min) {
+  #concept {
+    .what-is-it {
+      height: 400px;
+      padding-top: 5em;
+    }
+  }
+}
+
+@media (min-width: $screen-md-min) {
+  #concept {
+    .block-logo {
+      display: block;
+      background-image: url("../img/logo-lg.png"), url("../img/background-logo-index.jpg");
+      background-position: center center, center center;
+      background-repeat: no-repeat;
+      height: 585px;
+    }
+    .what-is-it {
+      height: 585px;
+      padding-top: 9em;
+    }
+  }
+}
 
 // Other styles
-
 .btn-activities {
   display: block;
   padding: 15px 0;
